# YoutubeLive-Chatx

./: .gitignore  LICENSE  README.md  build.gradle.kts  build.ps1  loadtest.json  settings.gradle.kts
reactjs-frontend/: README.md  package-lock.json  package.json
reactjs-frontend/public/: index.html  manifest.json
reactjs-frontend/src/: App.js
reactjs-frontend/src/components/: Footer.js  HistoryModal.js  LanguageSelector.js  MessageGraphCard.js  ScraperControlsCard.js  ScraperDataCard.js  SettingsModal.js  UserProfile.js
reactjs-frontend/src/hooks/: useCustomHooks.js
reactjs-frontend/src/i18n/: i18n.js
reactjs-frontend/src/locales/en/: translation.json
reactjs-frontend/src/locales/fr/: translation.json
reactjs-frontend/src/locales/ja/: translation.json
reactjs-frontend/src/locales/ko/: translation.json
reactjs-frontend/src/services/: AuthService.js
reactjs-frontend/src/utils/: helpers.js
rust-scraper/: Cargo.toml
rust-scraper/src/: js_scripts.rs  main.rs
src/main/java/csw/youtube/chat/: Application.java
src/main/java/csw/youtube/chat/common/annotation/: ApiV1.java  RateLimit.java
src/main/java/csw/youtube/chat/common/config/: ApiVersionConfig.java  ApplicationConfig.java  AsyncConfig.java  CorsConfig.java  CustomTaskScheduler.java  LinguaConfig.java  ObjectMapperConfig.java  OpenApiConfig.java  WebSocketConfig.java
src/main/java/csw/youtube/chat/common/exception/: AGlobalExceptionHandler.java  DuplicateResourceException.java  ResourceNotFoundException.java
src/main/java/csw/youtube/chat/common/util/: DAT.java  LocalDater.java
src/main/java/csw/youtube/chat/gemini/: AISummarizeRequestDto.java  GeminiRequestDto.java  GeminiResponseDto.java  GeminiService.java
src/main/java/csw/youtube/chat/live/controller/: AIController.java  ChatMessageController.java  MonitorController.java  ScraperController.java  ScraperPlaywrightController.java  (+1 more)
src/main/java/csw/youtube/chat/playwright/: DefaultPlaywrightFactory.java  PlaywrightBrowserHolder.java  PlaywrightBrowserManager.java  PlaywrightBrowserPool.java  PlaywrightConfig.java  PlaywrightFactory.java  PlaywrightPoolMetrics.java  PlaywrightResources.java  ScraperStatsEndpoint.java
src/main/resources/: application-secret-example.yml  badwords.txt  ignorekeywords.txt  playwright.properties  ytchatx-scraper-linux
src/main/resources/static/: index.html
src/main/resources/templates/: scraper-monitor.html
src/test/java/csw/youtube/chat/: ApplicationTests.java
src/test/java/csw/youtube/chat/playwright/: PlaywrightBrowserPoolTest.java  PlaywrightManagerStressTest.java
src/test/python/: test-get-video.py  test-load.py
src/test/resources/: save_html.py
(+59 files in other folders)
