[package]
name = "ytchatx-scraper"
version = "1.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chromiumoxide = { git = "https://github.com/mattsse/chromiumoxide", features = ["tokio-runtime"], default-features = false, branch = "main" }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
futures = "0.3"
chrono = "0.4.40"
serde = "1.0.218"
sysinfo = { version = "0.33.1", features = ["windows"] }
