[package]
name = "ytchatx-scraper"
version = "1.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
chromiumoxide = { git = "https://github.com/mattsse/chromiumoxide", features = [
    "tokio-runtime",
], default-features = false, branch = "main" }
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["full"] }
anyhow = "1.0.97"
futures = "0.3.31"
chrono = "0.4.40"
serde = "1.0.219"
sysinfo = { version = "0.33.1", features = ["windows"] }
tempfile = "3.18.0"
rustc-hash = "2.1.1"

[profile.release]
codegen-units = 1 # Improves performance by enabling more optimizations
lto = "fat"       # Enables Link-Time Optimization for better performance
strip = "symbols" # Strips debug symbols to reduce binary size
panic = "abort"   # Removes panic handling runtime for smaller binaries
opt-level = 3     # Maximizes optimizations for performance
debug = false     # Removes debug information
